--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-medium": "^2.0.2",
     "gatsby-transformer-sharp": "^2.1.8",
+    "medium-to-markdown": "^0.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
