--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.3",
     "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-twitter": "^2.1.2",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.13",
     "gatsby-remark-images": "^3.0.14",
